Stopwatch/backend/public/Stopwatch.css
/* ... */
   
   .play-btn span{
    position: absolute;
    top: 50%;
    left: 33%;
    transform: translateY(-50%);
    width: 5px;
    height: 25px;
    border-radius: 2px;
    background: #5f7a61;
    transition: .5s;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
   
   .play-btn span:nth-child(2){
    left: 55%;
    transform-origin: center;
   }
   
   .play-btn.pause span:nth-child(2){
    transform: translateY(-50%) scaleY(0);
   }
   
   .play-btn.pause span:nth-child(1){
    left: 63%;
    top: 63%;
    width: 20px;
    transform: translate(-70%, -70%);
    border-radius: 0;
    clip-path: polygon(0 0, 100% 53%, 100% 50%, 0% 100%);
   }
   
   .play-btn.pause {
    animation: pulse 2s linear infinite;
    background: white;
   }
   
   .play-btn.play {
    animation: pulse 2s linear infinite;
    background: white;
   }
   
   @keyframes pulse {
    0%{
       box-shadow: 0;
    }
    50%{
      box-shadow: 0 0 0 11px rgba(255, 255, 255, 0.1);
    } 
    100%{
      box-shadow: 0 0 0 11px rgba(255, 255, 255, 0.4);
    }
   }
   
   @keyframes rotate {
    0%{
      transform: rotate(0);
    }
    100%{
      transform: rotate(360deg);
    }
   }
   
   .songName, .artistName{
    text-align: center;
    text-transform: capitalize;
   }
   
   .songName{
    font-size: 20px;
    font-weight: 500;
   }
   
   .artistName{
    font-size: 20px;
   }

   
   
   
/* Next & previous buttons */
.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    text-align: center;
    width: 50px;
    height: 50px;
    padding: 16px;
    margin-top: -22px;
    margin-left: 50px;
    margin-right: 25px;
    color: white;
    font-weight: bold;
    font-size: 75px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
    z-index: 5;
   }
   

   .next {
    right: 33.8%;
    border-radius: 3px 0 0 3px;
   }
   
   .pervious-btn{
    margin-top: 40%;
    width: 39px;
    height: 35px;
    border-radius: 50%;
    margin-right: 7%;
    border: none;
   }
   
   .next-btn{
    margin-top: 40%;
    
    position: relative;
    cursor: pointer;
    border:none;
    width: 39px;
    height: 35px;
    border-radius: 50%;
    margin-left: 7%;
   }
   
   
   .next-btnPlayList{
     position: relative;
     /* background: url('/audio/NextButton.png'); */
     cursor: pointer;
     border:none;
     width: 43px;
     height: 35px;
     border-radius: 50%;
     z-index: 2;
     margin-top: -39%;
     margin-left: 7%;
    }
   
    .previous-btnPlayList{
     position: absolute;
     margin-top:-39%;
     width: 35px;
     height: 35px;
     border-radius: 50%;
     margin-left: -36%;
     border:none;
     cursor: pointer;
     z-index: 2;
    }
   
   .play-btn{
    position: relative;
    width: 45px;
    height: 40px;
    
    border-radius: 50%;
    background: #d5eebb;
    cursor: pointer;
    border:none;
   }
   
 .newNextAndPreviousButtons{
      position: absolute; margin-left: 5%; 
   } 

   @media only screen and (min-width: 768px) {
    .newNextAndPreviousButtons {
        display: inline-flex;
        position: absolute;
        margin-top: 3%;
        margin-left: 30%;
    }
}
   
   .kindOfMusic{
     z-index: 2;
   }
   
   .pervious-btn img{
    position: relative;
    cursor: pointer;
    border:none;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    margin-right: 10px;
    background: url('audio/PreviousButton.png');
   }
   
   .next-btn img{
    width: 100%;
    height: 100%;
    border-radius: 50%;
   }
   


.stopwatchLabel{
    /* position: absolute;  */
    color: yellow;
    margin-left: -2%;
    margin-top: 9%;
       position: fixed;   /* instead of relative */
    top: 20px;         /* adjust to where you want it */
    left: 50%;
    transform: translateX(-50%);
    z-index: 1000000;  
}

body{
    background: gray;
}

.trackDiv{
    background: lightgray;
    max-width: 500px;
    min-height: 550px;
    margin-left: 65%;
    margin-top: 105px;
}

.stopwatchDiv{
    background: lightgray;
    min-width: 300px;
    min-height: 550px;
    margin-top: -54%;
}

.button{
    background: #FFBE00;
}

.songNameAndArtist{
    position:absolute; margin-top:50%; 
    list-style-type: none;
    font-weight: 700;
    min-width: 200px;
    margin-left: -45%;
}

.input{
    margin-top: 120%;
    margin-left: 17%;
    border-radius: 3%;
    max-width: 200px;
    min-height: 50px;
    text-align: center;
    font-weight: 700;
    font-size: 25px;
    background:#FFBE00;
    color: black;
    border: 1px white solid;
}

.timer{
    position: absolute;
    margin-top: 108%;
    margin-left: 25%;
    min-width: 75px;
    min-height: 30px;
    font-weight: 600;
    background: none;
    color: #001d35;
    border-radius: 10%;
    border: none;
 }

 .timer:hover{
    background: #A3C5FF;
 }
 
 .stopwatch{
    position: absolute;
    margin-top: 108%;
    margin-left: 50%;
    min-width: 75px;
    min-height: 30px;
    font-weight: 600;
    background: none;
    color: #001d35;
    border-radius: 10%;
    border: none;
 }

  .cancelButtonTraining {
    position: absolute;
    margin-top: -100%;
    margin-left: 42%;
    width: 5%;
    height: 4%;
}




 .stopwatch:hover{
    background: #A3C5FF;
 }

.divForButtons{
    position: absolute;
    margin-top: 5%;
    margin-left: 25%;
}

.numberTwelve{
    margin-left: 44%;
    margin-top: 3%;
    position: absolute;
    font-size: 38px;
    
    /* color: white; */
}

.numberOne{
    margin-left: 68%;
    margin-top: 12%;
    position: absolute;
    font-size: 28px;
    font-family: Arial, Helvetica, sans-serif, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    /* color: white; */
}

.numberTwo{
    margin-left: 81%;
    margin-top: 23%;
    position: absolute;
    font-size: 28px;
    font-family: Arial, Helvetica, sans-serif, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    /* color: white; */
}
/* ... */

